{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 929,
  "lineage": "36331932-ea0b-312c-e3dc-306a272caa95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alavruschik_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/alavruschik-alb/fe4c4c6da3a7ff2f",
            "arn_suffix": "app/alavruschik-alb/fe4c4c6da3a7ff2f",
            "dns_name": "alavruschik-alb-2093626686.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/alavruschik-alb/fe4c4c6da3a7ff2f",
            "idle_timeout": 10,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alavruschik-alb",
            "security_groups": [
              "sg-043ea25cc69e9e1c0",
              "sg-0852abab76925dd03"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0086055e1b304f326"
              },
              {
                "subnet_id": "subnet-012b6b728ee06c1b1"
              }
            ],
            "subnets": [
              "subnet-0086055e1b304f326",
              "subnet-012b6b728ee06c1b1"
            ],
            "tags": {
              "Name": "alavruschik_alb",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alavruschik_alb_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "certificate_arn": "arn:aws:acm:us-east-1:242906888793:certificate/f2e8b0e6-aa7a-48be-bedb-945df54a55f2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Default ALB responce from alavr",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/alavruschik-alb/fe4c4c6da3a7ff2f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/0d0a193291b2a835",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/0d0a193291b2a835",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/alavruschik-alb/fe4c4c6da3a7ff2f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_alertmanager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-alertmanager",
            "port": 9093,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_target_group_alertmanager",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-grafana",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_target_group_grafana",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-jenkins",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_target_group_jenkins",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_nexus",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-nexus",
            "port": 8081,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_tg_nexus",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_prometheus",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-prometheus",
            "port": 9090,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_target_group_prometheus",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alavruschik_alb_tg_sonar-qube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
            "arn_suffix": "targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alavruschik-alb-tg-sonar-qube",
            "port": 9000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alavruschik_alb_target_group_sonar-qube",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_alertmanager",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb-20200608125858169400000007",
            "port": 9093,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_alertmanager",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb-20200608125857311600000004",
            "port": 9093,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_alertmanager",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_grafana",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180-20200608125858778100000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_grafana",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180-20200608125858046300000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_grafana",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_jenkins",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178-20200608125857295900000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
            "target_id": "i-04a569ed912c2be47"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_jenkins",
            "aws_instance.alavruschik_jenkins",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178-20200608125857309500000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
            "target_id": "i-04a569ed912c2be47"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_jenkins",
            "aws_instance.alavruschik_jenkins",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_nexus",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876-2020060812590301900000000d",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
            "target_id": "i-0793da30d13e21adc"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_nexus",
            "aws_instance.alavruschik_sonar-qube_nexus",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876-2020060812590295850000000b",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
            "target_id": "i-0793da30d13e21adc"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_nexus",
            "aws_instance.alavruschik_sonar-qube_nexus",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_prometheus",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3-20200608125858024400000005",
            "port": 9090,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_prometheus",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3-20200608125858733000000008",
            "port": 9090,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
            "target_id": "i-010916f1e0de8d1f1"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_prometheus",
            "aws_instance.alavruschik_prometheus_grafana_alertmanager",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alavruschik_alb_target_group_attachment_sonar-qube",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b-2020060812590293970000000a",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
            "target_id": "i-0793da30d13e21adc"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_sonar-qube",
            "aws_instance.alavruschik_sonar-qube_nexus",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b-2020060812590298940000000c",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
            "target_id": "i-0793da30d13e21adc"
          },
          "dependencies": [
            "aws_alb_target_group.alavruschik_alb_tg_sonar-qube",
            "aws_instance.alavruschik_sonar-qube_nexus",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alavruschik_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-04e80237d2982e6bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e80237d2982e6bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b540cf608ffcfd78",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-35-174-1-121.compute-1.amazonaws.com",
            "public_ip": "35.174.1.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca2adc58c9edfb62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0086055e1b304f326",
            "tags": {
              "Name": "alavruschik_bastion_us-east-1",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852abab76925dd03",
              "sg-0915faf205399b321"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_ssh",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alavruschik_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-04a569ed912c2be47",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a569ed912c2be47",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe426c5da2f37b0a",
            "private_dns": "ip-10-0-0-54.ec2.internal",
            "private_ip": "10.0.0.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0389670665a7db4bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e839697690671c3",
            "tags": {
              "Name": "alavruschik_jenkins",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852abab76925dd03"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alavruschik_nat_ec2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06633932c6ba1188a",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-0d892ddba9ad00fd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d892ddba9ad00fd1",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0899c1d16d1881e12",
            "private_dns": "ip-10-0-0-8.ec2.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-54-172-53-137.compute-1.amazonaws.com",
            "public_ip": "54.172.53.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-076308564f4deb4f9",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0086055e1b304f326",
            "tags": {
              "Name": "alavruschik_nat_ec2-1",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043ea25cc69e9e1c0",
              "sg-0852abab76925dd03"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06633932c6ba1188a",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-0cccaaefa6871feac",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cccaaefa6871feac",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e88e1a50ed6bbdc5",
            "private_dns": "ip-10-0-0-24.ec2.internal",
            "private_ip": "10.0.0.24",
            "public_dns": "ec2-3-89-79-255.compute-1.amazonaws.com",
            "public_ip": "3.89.79.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0f8bba6085bbd025a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-012b6b728ee06c1b1",
            "tags": {
              "Name": "alavruschik_nat_ec2-2",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043ea25cc69e9e1c0",
              "sg-0852abab76925dd03"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alavruschik_prometheus_grafana_alertmanager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-010916f1e0de8d1f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010916f1e0de8d1f1",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c784b88f7e6ad54a",
            "private_dns": "ip-10-0-0-42.ec2.internal",
            "private_ip": "10.0.0.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee2400893a22da0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd5a3b5fde5befd6",
            "tags": {
              "Name": "alavruschik_prometheus_grafana_alertmanager",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852abab76925dd03"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alavruschik_sonar-qube_nexus",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-0793da30d13e21adc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0793da30d13e21adc",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "alavruschik_trainee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003f95c3c66ef66b3",
            "private_dns": "ip-10-0-0-41.ec2.internal",
            "private_ip": "10.0.0.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03d22a0ed613d9ee5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd5a3b5fde5befd6",
            "tags": {
              "Name": "alavruschik_sonar-qube_nexus",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852abab76925dd03"
            ]
          },
          "dependencies": [
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alavruschik_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a6ee913e6e29786d",
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_internet_gateway",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_alertmanager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-alertmanager/c8ece7a2b47ae7cb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/1d74594e7c8e76eb",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "alertmanager.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "alertmanager.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/1d74594e7c8e76eb",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 3
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_alertmanager",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-grafana/4575bcd378a5f180",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/2ab13938df44a882",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "grafana.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "grafana.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/2ab13938df44a882",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 4
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_grafana",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-jenkins/c2d16845603ab178",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/7c0e068bcd7cdb0e",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "jenkins.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "jenkins.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/7c0e068bcd7cdb0e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 5
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_jenkins",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_nexus",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-nexus/c119c9bf37017876",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/4a5b7f00a2f5191f",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "nexus.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "nexus.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/4a5b7f00a2f5191f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 6
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_nexus",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_prometheus",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-prometheus/9efe70dddbb91ee3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/9d71ce2c4070264c",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "prometheus.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "prometheus.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/9d71ce2c4070264c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 2
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_prometheus",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alavruschik_sonar-qube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/alavruschik-alb-tg-sonar-qube/554f2bd1c7ffd73b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/4904a333e821f9b6",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "sonar-qube.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "sonar-qube.*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener-rule/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5/4904a333e821f9b6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/alavruschik-alb/fe4c4c6da3a7ff2f/ee4e601365fccda5",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.alavruschik_alb",
            "aws_alb_listener.alavruschik_alb_https",
            "aws_alb_target_group.alavruschik_alb_tg_sonar-qube",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alavruschik_route_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02089d5ae4a87b744",
            "owner_id": "242906888793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d892ddba9ad00fd1",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alavruschik_route_private",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_instance.alavruschik_nat_ec2",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08caf2fef0005a387",
            "owner_id": "242906888793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0cccaaefa6871feac",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alavruschik_route_private",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_instance.alavruschik_nat_ec2",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alavruschik_route_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060e8483ca98ffb5d",
            "owner_id": "242906888793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6ee913e6e29786d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alavruschik_route_public",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_internet_gateway.alavruschik_internet_gateway",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alavruschik_route_assosiation_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e60892925256c8c",
            "route_table_id": "rtb-02089d5ae4a87b744",
            "subnet_id": "subnet-0dd5a3b5fde5befd6"
          },
          "dependencies": [
            "aws_instance.alavruschik_nat_ec2",
            "aws_route_table.alavruschik_route_private",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062557f1cccc75fea",
            "route_table_id": "rtb-08caf2fef0005a387",
            "subnet_id": "subnet-09e839697690671c3"
          },
          "dependencies": [
            "aws_instance.alavruschik_nat_ec2",
            "aws_route_table.alavruschik_route_private",
            "aws_security_group.alavruschik_sg_incoming",
            "aws_security_group.alavruschik_sg_vpc_traffic",
            "aws_subnet.alavruschik_private_subnet",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alavruschik_route_assosiation_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb6ce8b42908b735",
            "route_table_id": "rtb-060e8483ca98ffb5d",
            "subnet_id": "subnet-0086055e1b304f326"
          },
          "dependencies": [
            "aws_internet_gateway.alavruschik_internet_gateway",
            "aws_route_table.alavruschik_route_public",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f3a51d42a6a394",
            "route_table_id": "rtb-060e8483ca98ffb5d",
            "subnet_id": "subnet-012b6b728ee06c1b1"
          },
          "dependencies": [
            "aws_internet_gateway.alavruschik_internet_gateway",
            "aws_route_table.alavruschik_route_public",
            "aws_subnet.alavruschik_public_subnet",
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alavruschik_sg_incoming",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:security-group/sg-043ea25cc69e9e1c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043ea25cc69e9e1c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alavruschik_sg_incoming",
            "name_prefix": null,
            "owner_id": "242906888793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alavruschik_sg_incoming",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alavruschik_sg_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:security-group/sg-0915faf205399b321",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0915faf205399b321",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alavruschik_sg_ssh",
            "name_prefix": null,
            "owner_id": "242906888793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alavruschik_sg_ssh",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alavruschik_sg_vpc_traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:security-group/sg-0852abab76925dd03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0852abab76925dd03",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alavruschik_sg_vpc_traffic",
            "name_prefix": null,
            "owner_id": "242906888793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alavruschik_sg_vpc_traffic",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alavruschik_private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0dd5a3b5fde5befd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.32/28",
            "id": "subnet-0dd5a3b5fde5befd6",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_private_subnet-1",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-09e839697690671c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.48/28",
            "id": "subnet-09e839697690671c3",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_private_subnet-2",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alavruschik_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0086055e1b304f326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0086055e1b304f326",
            "map_public_ip_on_launch": true,
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_public_subnet-1",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-012b6b728ee06c1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-012b6b728ee06c1b1",
            "map_public_ip_on_launch": true,
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_public_subnet-2",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            },
            "vpc_id": "vpc-0e76b59386eac0b9d"
          },
          "dependencies": [
            "aws_vpc.alavruschik_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alavruschik_vpc_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:vpc/vpc-0e76b59386eac0b9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0cc11972086d84793",
            "default_route_table_id": "rtb-04c0dae567af57e3d",
            "default_security_group_id": "sg-0b9ebdad73b1e0af9",
            "dhcp_options_id": "dopt-fdee0a98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e76b59386eac0b9d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c0dae567af57e3d",
            "owner_id": "242906888793",
            "tags": {
              "Name": "alavruschik_vpc_main",
              "coherent:client": "Coherent",
              "coherent:environment": "dev",
              "coherent:owner": "ArtemLavruschik@coherentsolutions.com",
              "coherent:project": "Training"
            }
          }
        }
      ]
    }
  ]
}